fix: nacos config